# CurseWorkOOP

./: CMakeLists.txt  Main.cpp
assets/scripts/: CMakeLists.txt  Scripts.h
assets/scripts/gameplay/: Building.h  BuildingInfo.h  CMakeLists.txt  Cell.h  ConditionFactory.h  Field.h  Gameplay.h  Gold.h  IBuilding.h  Material.h  Resources.h  Time.h
assets/scripts/ui/: CMakeLists.txt  Ui.h
assets/scripts/utility/: CMakeLists.txt  Container.h  PointerList.h  Rectangle.h  Signal.h  Singleton.h  Size2.h  Utility.h  Vector2.h
